nginx/expose-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths: 
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: sre-challenge-word2number-restapi
                port:
                  number: 8000
